Comments from Nick.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -783,9 +783,15 @@
   publisher={Elsevier}
 }
 
-@book{tauxe2009essentials,
+@unpublished{swansonramezani,
+  author={Swanson-Hysell, Nicholas L. and Ramezani, J.},
+  title={Unpublished geochronoligic constraints},
+  year={unpublished}
+}
+
+@book{tauxe2010essentials,
   title={Essentials of paleomagnetism},
-  year={2009},
+  year={2010},
   author={Tauxe, L and Banerjee, SK and Butler, RF and van der Voo, R},
   publisher={University of California Press, Berkeley}
 }
