Move text from the thesis conclusion here.

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -1073,6 +1073,15 @@ Our inversions allow for, but do not require, a slowdown in the polar wander pat
 In both cases, the implied Laurentian plate speed during rifting is significantly greater than 20 cm/yr.
 Such a fast plate speed can be explained by faster average Proterozoic plate speeds or by a TPW event.
 
+Future models for the inversion of past plate motions could include TPW as an
+explicit model parameter. Since TPW and plate motions are both described by
+finite rotations around Euler poles, it is very difficult to distinguish them,
+and there should be significant tradeoffs between the APW path being explained
+mostly by plate motions and mostly by TPW. 
+There is hope for distinguishing them, however,
+by regularization via the prior distributions,
+and by the inclusion of more continental blocks in the inversion.
+
 \section*{Acknowledgements}
 \label{sec:acknowledgements}
 This work was supported by National Science Foundation grant EAR-1246670. 
