Fix up bibtex entry.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -785,8 +785,8 @@
 
 @unpublished{swansonramezani,
   author={Swanson-Hysell, Nicholas L. and Ramezani, J.},
-  title={Unpublished geochronoligic constraints},
-  year={unpublished}
+  title={Unpublished geochronologic constraints},
+  note={In preparation}
 }
 
 @book{tauxe2010essentials,
