Add nominal year.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -786,7 +786,8 @@
 @unpublished{swansonramezani,
   author={Swanson-Hysell, Nicholas L. and Ramezani, J.},
   title={Unpublished geochronologic constraints},
-  note={In preparation}
+  note={In preparation},
+  year={2016}
 }
 
 @book{tauxe2010essentials,
